[gd_scene load_steps=5 format=3 uid="uid://ml81ns4ra6gt"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_3x00i"]
[ext_resource type="Script" path="res://scenes/game/camera_2d.gd" id="2_lavrl"]
[ext_resource type="PackedScene" uid="uid://dscwcsk1xacdp" path="res://scenes/game/parallax_background.tscn" id="3_4q7ah"]
[ext_resource type="Script" path="res://scenes/game/elapsed_time.gd" id="5_pfu6u"]

[node name="Game" type="Node2D"]
script = ExtResource("1_3x00i")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("2_lavrl")

[node name="ParallaxBackground" parent="." instance=ExtResource("3_4q7ah")]

[node name="ElapsedTime" type="Node" parent="."]
script = ExtResource("5_pfu6u")

[node name="EnemyManagers" type="Node" parent="."]
